Searching for Books through Trees